Updates to a2.html File about Project Details

--- a/a2.html
+++ b/a2.html
@@ -37,12 +37,12 @@
     </li>
   </ul>
   <h2>Goal/s</h2>
-  <p>We are tasked to design and create a website for an open house event at the prestigious university James Cook University, which offers multiple degrees and specialization in different fields.
+  <p>We are tasked to design and create a website for an open house event at the prestigious university James Cook University, which offers multiple degrees and specialization in different fields. <br>
     The goal of the website is to: <br>
-    - Increase acceptance rate 5%
-    - Increase open house attendance rate 10%
-    - Custom Design Theme made from scratch that allows for dynamic changes through WordPress
-    - Multi-version design of the website </p>
+    - Increase acceptance rate 5% <br>
+    - Increase open house attendance rate 10% <br>
+    - Custom Design Theme made from scratch that allows for dynamic changes through WordPress <br>
+    - Multi-version design of the website  <br></p>
   <h2>Project Links</h2>
   <ul>
     <li><a href="https://jcueducation.com/" target="_blank">Production Site</a></li>
@@ -56,7 +56,7 @@
     <li><a href="https://app.slack.com/client/T069V1JREQP/C06A9JGNYJW" target="_blank">Slack group</a></li>
   </ul>
   <h2>Local Environments</h2>
-  <p>XAMPP served as the local development environment, providing an integrated platform with Apache, MySQL, PHP, and phpMyAdmin for efficient WordPress theme and site development. Varying Vagrants Vagrant offered a robust development environment with pre-configured settings, enhancing collaboration and testing in a consistent setup.</p>
+  <p>XAMPP served as the local development environment, providing an integrated platform with Apache, MySQL, PHP, and phpMyAdmin for efficient WordPress theme and site development. <br> Varying Vagrants Vagrant offered a robust development environment with pre-configured settings, enhancing collaboration and testing in a consistent setup.</p>
   <h2>References </h2>
   <p><a href="https://getbootstrap.com/" target="_blank">Bootstrap </a></p>
   <p><a href="https://varyingvagrantvagrants.org/" target="_blank">Varying Vagrants Vagrant</a></p>
@@ -65,7 +65,9 @@
   <p>Password: IrlUZly,d:D5</p>
   <p><a href="https://jcueducation.com/wp-admin/" target="_blank">Website WordPress</a></p>
   <h2>Comments</h2>
-  
+  <p>Website is fully functional and optimized to adhere to project goals. Website is being hosted in Singapore Server so there should be no problems with connecting to it</p> <br>
+  <p>In the off chance of an AWS conduct maintenance and server will be shut down temporarily. In that case kindly email <a
+    href="mailto:aditya.vijay@my.jcu.edu.au">aditya.vijay@my.jcu.edu.au</a> and I will provide screenshot evidence or you can refer to the GitHub Repositories above which contain screenshot images of the website as well.</p>
 </body>
 
 </html>
