Changes to a2.html File

--- a/a2.html
+++ b/a2.html
@@ -55,8 +55,29 @@
     <li><a href="https://github.com/AdityaVijay1/CMS-GroupPA1?tab=readme-ov-file#website-details" target="_blank">GitHub repository - environment</a></li>
     <li><a href="https://app.slack.com/client/T069V1JREQP/C06A9JGNYJW" target="_blank">Slack group</a></li>
   </ul>
+
+  <h1>Publishing</h1>
+  <p>Website is available, up-to-date and working in production. Available to view at <a href="https://jcueducation.com/" target="_blank">Production Site</a> </p>
+  <p>Website's content is complete, accurate and the text and media used are well integrated and optimized. Goals of the website are clearly evident in the design with multiple and appropriate use of calls-to-action</p>
+  <p>Website's content is well organized and navigation is unique and intuitive</p>
   <h2>Local Environments</h2>
   <p>XAMPP served as the local development environment, providing an integrated platform with Apache, MySQL, PHP, and phpMyAdmin for efficient WordPress theme and site development. <br> Varying Vagrants Vagrant offered a robust development environment with pre-configured settings, enhancing collaboration and testing in a consistent setup.</p>
+  <p>Local Host Showcase:</p>
+  <img src="assets/images/localhostproof.png" alt="LocalHost Showcase" height="600px" width="1000px">
+  
+
+  <p>Our Team particularly liked this specific interface design due to the way we have fully utilized the custom made theme which allows for dynamic content to be added through WordPress that is the custom media images, the required content and multiple calls to action to reach the website's goals and audience, making it a professional dedicated website.</p>
+  <p>Interface Design:</p>
+  <img src="assets/images/interfacedesign.png" alt="Interface" height="600px" width="1100px">
+
+
+  <h1>Website Details</h1>
+  <p>Through utilizing plugins such as Yoast SEO, we were able to drastically improve the Search Engine Optimization for the Website which essentially made it suitable for scanning and for site goals, the images used enhance the meaning of the text content.</p>
+  <p>Theme Development is complete and follows WordPress standards and guidelines; theme is reusable and can be used to dynamically create content on the website, the content is not hard coded. </p>
+  <p>Version Control is used appropriately with decent commit messages and no duplicate files or folders. </p>
+  <p>Very good usage of tools and resources that are present in the real-world Industry as well </p>
+  <p>Documentation is complete, well written, error free and done well in the sense to allow future development and deployment of the site.</p>
+  
   <h2>References </h2>
   <p><a href="https://getbootstrap.com/" target="_blank">Bootstrap </a></p>
   <p><a href="https://varyingvagrantvagrants.org/" target="_blank">Varying Vagrants Vagrant</a></p>
@@ -64,6 +85,7 @@
   <p>Login: user</p>
   <p>Password: IrlUZly,d:D5</p>
   <p><a href="https://jcueducation.com/wp-admin/" target="_blank">Website WordPress</a></p>
+  <p>https://jcueducation.com/wp-admin/ incase the above link may not work, this would redirect you to the login page where upon filling those details, access to the dashboard will be granted.</p>
   <h2>Comments</h2>
   <p>Website is fully functional and optimized to adhere to project goals. Website is being hosted in Singapore Server so there should be no problems with connecting to it</p> <br>
   <p>In the off chance of an AWS conduct maintenance and server will be shut down temporarily. In that case kindly email <a
